# calc_notes

./: .gitignore
admin/: package-lock.json  package.json  tsconfig.json  vite.config.ts
admin/src/: app.html  models.ts
admin/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
admin/src/routes/account/login/: +page.svelte
admin/src/routes/edit/notes/[title]/: +page.svelte  +page.ts
admin/src/styles/: _consts.scss  _themes.scss
backend/: Cargo.toml
backend-derive/: Cargo.toml
backend-derive/src/: lib.rs
backend/src/: auth.rs  main.rs  md.rs  model.rs
backend/src/web/: auth.rs  data.rs  mod.rs
backend/tests/: unit.rs
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.server.ts  +page.svelte
frontend/src/routes/admin/account/login/: +page.svelte
frontend/src/routes/admin/edit/notes/[title]/: +page.svelte  +page.ts
frontend/src/routes/notes/[title]/: +page.svelte  +page.ts
frontend/src/styles/: _consts.scss  _themes.scss
