[package]
name = "calc_notes_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.28.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json", "cookies"] }
lazy_static = "1.4.0"
anyhow = "1.0.71"
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
rustls = "0.21.1"
tokio-stream = "0.1.14"
once_cell = "1.18.0"
tower-http = { version = "0.4.1", features = ["cors"] }
axum-login = "0.5.0"
password-hash = "0.5.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
